<resources>
    <string name="app_name">Mi Biblioteca Musical</string>
    <string name="login_title">Bienvenido</string>
    <string name="login_subtitle">Inicia sesión</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="helper_text">Obligatorio</string>
    <string name="hint_password">Contraseña</string>
    <string name="remember_pass">Recordar contraseña</string>
    <string name="start_sesion">Iniciar sesión</string>
    <string name="crear_usuario">Crear nueva cuenta</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_confirm">Aceptar</string>
    <string name="dialog_new_user_title">Nuevo usuario</string>
    <string name="dialog_register_user">Registrar usuario</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="home">Inicio</string>
    <string name="find">Find</string>
    <string name="library">Playlists</string>
    <string name="error_general_peticion">Error desconocido en la peticion</string>
    <string name="description_image_playlist_card">Imagen playlist</string>
    <string name="playlist_title">Titulo playlist</string>
    <string name="playlist_numero_canciones">00 canciones</string>
    <string name="playlist_fecha_creacion">Creada el 00/00/0000</string>
    <string name="description_image_podcast_card">Imagen podcast</string>
    <string name="podcast_title">Titulo podcast</string>
    <string name="podcast_anyo">Año: 0000</string>
    <string name="description_image_album_card">Imagen album</string>
    <string name="album_title">Titulo album</string>
    <string name="album_artista">Artista: nombreArtista</string>
    <string name="album_anyo">Año: 0000</string>
    <string name="home_title">Mi Biblioteca Musical</string>
    <string name="sp_id_usuario">id_usuario</string>
    <string name="sp_remember_usuario">control_recuerdo_usuario</string>
    <string name="main_error_server">Error en la petición</string>
    <string name="playlists_title">Playlists</string>
    <string name="podcasts_title">Podcasts</string>
    <string name="albums_title">Álbums</string>
    <string name="description_icon_music">Music icon</string>
    <string name="description_icon_playlist">Playlist icon</string>
    <string name="description_icon_podcast">Podcast icon</string>
    <string name="description_icon_album">Album icon</string>
    <string name="songs_title">Canciones</string>
    <string name="description_image_song_card">Imagen cancion</string>
    <string name="cancion_title">Título canción</string>
    <string name="description_icon_time">Time icon</string>
    <string name="song_duration">000s</string>
    <string name="song_reproductions">0000</string>
    <string name="album_song">Álbum:</string>
    <string name="error_username_empty">El campo del nombre de usuario está vacío.</string>
    <string name="error_password_empty">El campo de la contraseña está vacío.</string>
    <string name="error_required_field">Este campo es obligatorio</string>
    <string name="error_login">El usuario y/o contraseña introducidos son incorrectos</string>
    <string name="text_artista">"Artista: "</string>
    <string name="text_album">"Álbum: "</string>
    <string name="not_specfied_artista">Artista no especificado</string>
    <string name="not_specified_year">Año no especificado</string>
    <string name="one_song">1 canción</string>
    <string name="songs">" canciones"</string>
    <string name="without_songs">Sin canciones</string>
    <string name="text_created_on">"Creada el "</string>
    <string name="not_specified_create_date">Fecha de creación no especificada</string>
    <string name="text_year">"Año: "</string>
    <string name="helper_text_optional">Opcional</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_search_songs">Buscar canciones</string>
    <string name="dialog_add_song_to_playlist">Añadir canción a playlist</string>
    <string name="hint_playlist_title">Título de playlist</string>
    <string name="error_playlist">Playlist no encontrada</string>
</resources>