<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".loginModule.LoginActivity">

    <ImageView
        android:id="@+id/imgPortada"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginBox"
        />

    <LinearLayout
        android:id="@+id/loginBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/md_theme_light_secondaryContainer"
        android:padding="@dimen/large_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_gravity="start"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:layout_gravity="start"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            app:counterEnabled="true"
            android:hint="@string/hint_username"
            app:helperText="@string/helper_text"
            app:counterMaxLength="@integer/max_length_username"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/max_length_username"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            app:counterEnabled="true"
            android:hint="@string/hint_password"
            app:helperText="@string/helper_text"
            app:counterMaxLength="@integer/max_length_username"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/max_length_username"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbRememberPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_min"
            android:text="@string/remember_pass"
            android:layout_gravity="start"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_sesion"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/common_margin_default"/>

        <TextView
            android:id="@+id/newUser"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tv_new_user_height"
            android:text="@string/crear_usuario"
            android:textColor="@color/seed"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/common_margin_min"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>