<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/card_size"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_margin_default"
    android:backgroundTint="@color/md_theme_light_secondaryContainer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imagePlaylist"
            android:src="@drawable/ic_playlist"
            android:layout_width="0dp"
            android:layout_height="@dimen/img_card_size"
            android:contentDescription="@string/description_image_playlist_card"
            android:background="@color/seed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagePlaylist"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/common_padding_default">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/playlist_title"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <TextView
                android:id="@+id/tvNumeroCanciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/playlist_numero_canciones"
                android:textAppearance="?attr/textAppearanceBody1"
                android:layout_marginTop="@dimen/margin_min"/>

            <TextView
                android:id="@+id/tvFechaCreacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/playlist_fecha_creacion"
                android:textAppearance="?attr/textAppearanceBody1" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>