<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/large_margin"
    android:layout_marginHorizontal="@dimen/common_margin_default"
    android:layout_marginBottom="@dimen/common_margin_default"
    tools:context=".findModule.FindFragment">

    <ImageView
        android:id="@+id/iconMusic"
        android:src="@drawable/ic_music"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:tint="@color/md_theme_light_tertiary"
        android:contentDescription="@string/description_icon_music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/songs_title"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="@color/md_theme_light_tertiary"
        app:layout_constraintStart_toEndOf="@id/iconMusic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/separator"
        android:layout_marginStart="@dimen/margin_min" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size"
        android:background="@color/md_theme_light_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginVertical="@dimen/common_margin_default"/>

    <SearchView
        android:id="@+id/svSongs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:queryHint="@string/hint_search_songs"
        android:iconifiedByDefault="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator"
        android:layout_marginTop="@dimen/common_margin_default"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvCanciones"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/item_cancion"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svSongs"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/common_margin_default"/>

</androidx.constraintlayout.widget.ConstraintLayout>